# trabalho-colisoes

./: .gitignore  CMakeLists.txt  settings.txt
assets/: fragment.glsl  vertex.glsl
include/ColisoesGL/: physics.hpp  sphere.hpp  test.hpp
src/: CMakeLists.txt  main.cpp  physics.cpp  shapes.c  shapes.cpp  shapes.h  sphere.cpp  test.cpp
vendors/glad/include/glad/: gl.h
